# xlsx2pb

./: README.md
sample/ue5/project/: .gitignore  project.sln  project.uproject
sample/ue5/project/Config/: DefaultEngine.ini  DefaultGame.ini
sample/ue5/project/Content/res/data/: proto_res.bytes
sample/ue5/project/Source/: project.Target.cs  projectEditor.Target.cs
sample/ue5/project/Source/Proto/: Proto.Build.cs
sample/ue5/project/Source/Proto/Res/: common.pb.cc  common.pb.h  item.pb.cc  item.pb.h  keywords.pb.cc  keywords.pb.h  keywords_client.pb.cc  keywords_client.pb.h  tsv2pb.pb.h
sample/ue5/project/Source/project/: project.Build.cs  project.cpp  projectGameModeBase.cpp  projectGameModeBase.h
sample/ue5/tools/res/: xls2pb_client.bat  xls2pb_client.sh  xls2pb_cpp
sample/ue5/tools/res/excel/物品/: 物品包表.xlsx  物品表.xlsx
sample/ue5/tools/res/excel/通用/: 图片资源表.xlsx
sample/ue5/tools/res/proto/client/: item.proto  keywords.proto  tsv2pb.proto
sample/ue5/tools/res/proto/server/: tsv2pb.proto
sample/ue5/tools/res/store/client/: res_item.bytes  res_item.txt  res_item_bag.txt  res_item_range.bytes  res_item_range.txt  res_sprite.txt
sample/ue5/tools/res/tsv/client/: 图片资源表.md5  图片资源表.tsv  物品包表.md5  物品包表.tsv  物品掉落表.md5  错误码表.tsv
sample/ue5/tools/res_client/: protoc_client.bat  protoc_client.sh
sample/unity2021/: .gitignore
sample/unity2021/Assets/Framework/Common/: EventManager.cs  IClear.cs  Singleton.cs  SingletonMonoBehaviour.cs
sample/unity2021/Assets/Framework/Common/Pool/: ClassPool.cs  ClassPoolMgr.cs  DictionaryPool.cs  DictionaryPoolMgr.cs  LinkedListPool.cs  LinkedListPoolMgr.cs  ListPool.cs  ListPoolMgr.cs
sample/unity2021/Assets/Framework/Editor/FindReferences/: FindReferences.cs  ignore.txt
sample/unity2021/Assets/Framework/Editor/Generate/: ExternalProcessInvoke.cs  IOUtils.cs  SyncTools.cs
sample/unity2021/Assets/Framework/Editor/Generate/GenMsg/: GenMsg.cs  SyncMsg.cs
sample/unity2021/Assets/Framework/Editor/Generate/GenRes/: GenRes.cs  GenResCode.cs  GenResCode_C#.cs  GenResCode_Lua.cs  GenResMenu.cs  SyncTable.cs
sample/unity2021/Assets/Framework/Editor/Generate/Proto2Lua/: Base.cs  ProtoData.cs
sample/unity2021/Assets/Framework/Editor/Generate/Proto2Lua/msg/: ErrorCode.cs  LuaPlayerInfo.cs  LuaProtoConfig.cs
sample/unity2021/Assets/Framework/Editor/Generate/Proto2Lua/res/: LuaKeyWords.cs
sample/unity2021/Assets/Framework/Editor/Generate/SyncArt/: SyncArt.cs
sample/unity2021/Assets/Framework/Editor/Generate/config/: art_table.xml  res_table.xml
sample/unity2021/Assets/Framework/Editor/Macro/: MacroDefine.cs  MacroDefineWnd.cs  MacroUtil.cs
sample/unity2021/Assets/Framework/Proto/: Proto.asmdef
sample/unity2021/Assets/Framework/Proto/CSMsg/: Client.cs  ErrorCode.cs  Keyword.cs
sample/unity2021/Assets/Framework/Proto/Table/: Common.cs  Item.cs  Keywords.cs  KeywordsClient.cs  Tsv2Pb.cs
sample/unity2021/Assets/Framework/Table/: Table.Load.cs  Table.Post.cs  Table.cs
sample/unity2021/Assets/res/data/proto/: proto_res.bytes
sample/unity2021/Assets/res/lua/data/: data_mgr.lua
sample/unity2021/Assets/res/lua/data/data_mgr/: data_mgr_common.lua  data_mgr_require.lua
sample/unity2021/ProjectSettings/: ProjectSettings.asset
sample/unity2021/UserSettings/Layouts/: default-2021.dwlt
sample/unity2021/tools/res/: xls2pb_client.bat  xls2pb_cpp
sample/unity2021/tools/res/excel/物品/: 物品包表.xlsx  物品掉落表.xlsx  物品范围表.xlsx  物品表.xlsx
sample/unity2021/tools/res/excel/通用/: 图片资源表.xlsx  错误码表.xlsx
sample/unity2021/tools/res/proto/: check_label.txt
sample/unity2021/tools/res/proto/client/: common.proto  keywords_client.proto
sample/unity2021/tools/res/store/client/: res_error_code.bytes  res_error_code.txt  res_item_drop.bytes  res_item_drop.txt  res_sprite.bytes
sample/unity2021/tools/res/tsv/client/: 物品掉落表.tsv  物品范围表.md5  物品范围表.tsv  物品表.md5  物品表.tsv  错误码表.md5
source/: .gitignore  CMakeLists.txt  main.cpp  tsv2pb.cpp  tsv2pb.h  xlsx2tsv.cpp  xlsx2tsv.h  xlsxcheck.cpp  xlsxcheck.h
source/OpenXLSX/: CMakeLists.txt
source/OpenXLSX/sources/: XLSharedStrings.cpp
source/dep/: README.md
source/dep/include/log4cplus/: config.h
source/dep/include/log4cplus/config/: defines.hxx  defines.hxx.cmake
source/dep/lib/mac/: liblog4cplus.la  libprotobuf-lite.la  libprotobuf.la  libprotoc.la
source/proto/: tools.pb.cc  tools.pb.h  tsv2pb.pb.cc
source/res/excel/: test.xlsx  文本表.xlsx
source/res/excel/物品/: 物品包表.xlsx  物品掉落表.xlsx  物品范围表.xlsx  物品表.xlsx
source/res/proto/: check_label.txt  common.proto  item.proto  keywords.proto  keywords_client.proto  text.proto
source/res/store/: res_item.bytes  res_item.txt  res_item_bag.bytes  res_item_drop.bytes  res_item_drop.txt  res_item_range.bytes  res_item_range.txt  res_text_cn.bytes  res_text_cn.txt  res_text_en.bytes  res_text_en.txt  test.bytes  test.txt
source/res/tsv/: test.md5  test.tsv  文本表.md5  文本表.tsv  物品包表.md5  物品包表.tsv  物品掉落表.md5  物品掉落表.tsv  物品范围表.md5  物品范围表.tsv  物品表.md5  物品表.tsv  物品表1.md5  物品表1.tsv
source/tools/: tools.proto  xls2pb_client.bat  xls2pb_client.sh
source/util/: CommonUtil.cpp  CommonUtil.h  logger.cpp  logger.h  md5.cpp  md5.h  singleton.h
